<resources>
    <string name="search">Szukaj…</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="app_name">Coco</string>
    <string name="left_double_arrow">&lt;&lt;</string>
    <string name="left_arrow">&lt;</string>
    <string name="appointment_more_dogs_question">Kogo jeszcze chcesz umówić?</string>
    <string name="choose_dog_warning">Wybierz klienta!</string>
    <string name="lock_date_end_before_start_warning">Czas końca nie może być wcześniej niż początku…</string>
    <string name="must_implement">\" musi używać\"</string>
    <string name="error">BŁĄD</string>
    <string name="no_dog_exception">NullPointerException. Brak klienta.</string>
    <string name="enter_name_error">Wpisz imię!</string>
    <string name="enter_adjective_error">Wpisz pseudonim!</string>
    <string name="enter_breed_error">Wpisz rasę!</string>
    <string name="delete_dog_exception">Nastąpił błąd przy usuwaniu klienta</string>
    <string name="delete_picture">Usuń zdjęcie</string>
    <string name="delete_picture_question">Czy chcesz usunąć to zdjęcie?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="dog_changes_saved">Zapisano zmiany klienta</string>
    <string name="dog_changes_not_saved">Nie zapisano zmian klienta</string>
    <string name="dog_changes_save_exception">Blad podczas zapisywania zmian klienta</string>
    <string name="dog_saved">Zapisano nowego klienta</string>
    <string name="dog_not_saved">Nie zapisano nowego klienta</string>
    <string name="save">Zapisz</string>
    <string name="day_summary">Podsumowanie dnia</string>
    <string name="sum">Suma:</string>
    <string name="from">od: </string>
    <string name="right_double_arrow"><![CDATA[>>]]></string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="new_dog">nowy</string>
    <string name="absence">Nie Przyszedł</string>
    <string name="_9_am">  09:00</string>
    <string name="_9_30am">  09:30</string>
    <string name="_10_am">10:00</string>
    <string name="_10_30am">10:30</string>
    <string name="_11_am">11:00</string>
    <string name="_11_30am">11:30</string>
    <string name="_12_pm">12:00</string>
    <string name="_12_30pm">12:30</string>
    <string name="_1_pm">13:00</string>
    <string name="_1_30pm">13:30</string>
    <string name="_2_pm">14:00</string>
    <string name="_2_30pm">14:30</string>
    <string name="_3_pm">15:00</string>
    <string name="_3_30pm">15:30</string>
    <string name="_4_pm">16:00</string>
    <string name="_4_30pm">16:30</string>
    <string name="_5_pm">17:00</string>
    <string name="_5_30pm">17:30</string>
    <string name="_6_pm">18:00</string>
    <string name="_6_30pm">18:30</string>
    <string name="_7_00pm">19:00</string>
    <string name="_7_30pm">19:30</string>
    <string name="create_appointment">Umów klienta</string>
    <string name="create_appointment_short">Umów</string>
    <string name="phone">Telefon:</string>
    <string name="edit">Edytuj</string>
    <string name="last_payment">Ostatnio płacił:</string>
    <string name="visit_duration">Długość wizyty:</string>
    <string name="visits">Wizyty</string>
    <string name="choose_photo">Wybierz zdjęcie</string>
    <string name="name">Imię</string>
    <string name="adjective">Pseudonim</string>
    <string name="breed">Rasa</string>
    <string name="delete">Usuń</string>
    <string name="note_hint">Notatka…</string>
    <string name="lock_date_prompt">Zamknij ten termin do:</string>
    <string name="null_dog_exception">Brak klienta!</string>
    <string name="null_">Null</string>
    <string name="dogs">Klienci</string>
    <string name="calendar">Kalendarz</string>
    <string name="summary">Podsumowanie</string>
    <string name="send_text_reminders">Wyślij przypomnienia</string>
    <string name="who_receives_reminder">Do kogo wysłać wiadomość?</string>
    <string name="send">Wyślij</string>
    <string name="text_reminder1">Groomer Coco przypomina o jutrzejszej wizycie na </string>
    <string name="text_reminder2">. Prosze o potwierdzenie lub ewentualna rezygnacje.</string>
    <string name="repeatedNumber">Powtórzony numer</string>
    <string name="text_with_appointment_details">Zapraszam %1$s na godzinę %2$s. Groomer Coco.</string>
    <string name="remove">Usuń</string>
    <string name="waiting_list">Lista rezerwowa</string>
    <string name="message_sent">Wiadomość wysłana</string>
    <string name="dog_added_to_waiting_list">Dodano klienta na listę rezerwową</string>
    <string name="adding_dog_to_waiting_list_failed">Dodanie klienta nie powiodło się</string>
    <string name="Text_reminder_content">Treść przypomnienia:</string>
    <string name="choose_number">Wybierz numer:</string>
    <string name="dog">Klient:</string>
    <string name="for_date">Na dzień:</string>
    <string name="is_on_waiting_list">\" jest na liście rezerwowej tego dnia. Czy chcesz go z niej usunąć?\"</string>
    <string name="delete_from_waiting_list">Usuń z listy rezerwowej</string>
    <string name="number_of_dogs">Liczba klientów</string>
    <string name="absents">Nie przyszło</string>
    <string name="first_timers">Nowych</string>
    <string name="stats">Statystyki</string>
    <string name="finances">Finanse</string>
    <string name="amount_paid">Zapłacone</string>
    <string name="amount_predicted">Przewidywane</string>
    <string name="dog_with_this_name_already_exists">Klient o tej nazwie już istnieje</string>
    <string name="do_you_still_want_to_save">Czy chcesz zapisać zmiany mimo tego?</string>
    <string name="yes_save">Tak, zapisz</string>
    <string name="no_return">Nie, cofnij</string>
    <string name="ok">OK</string>
    <string name="lock_day_prompt">Zamknąć na cały dzień?</string>
    <string name="servicedesc">Serwis costam kangurek kao</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>