<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/csPopupLockPeriod"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/color_coco_3"
    android:padding="2dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:autoSizeTextType="uniform"
        android:ems="8"
        android:minHeight="50dp"
        android:text="@string/lock_date_prompt" />
    <Button
        android:id="@+id/btnTimeBack"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:text="@string/left_arrow"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/etLockEndTime"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:background="@color/color_coco_3"
        android:ems="4"/>

    <Button
        android:id="@+id/btnTimeForward"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:text="@string/right_arrow"
        android:textSize="20sp"
        android:layout_marginStart="5dp"/>

    <Button
        android:id="@+id/btnLockDate"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_error"
        android:layout_marginStart="5dp"
        android:text="@string/ok" />
</LinearLayout>