<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_coco_3"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_coco_2">
        <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_date"
            android:textSize="34sp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/tvRemindersDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DATE"
            android:textSize="30sp"

            tools:ignore="HardcodedText"/>




    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/who_receives_reminder"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/infoBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_coco_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">


        <TextView
            android:id="@+id/tvWaitingListClientName"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:layout_marginStart="5dp"
            android:gravity="center|start"
            android:text="@string/dog"
            android:textColor="@color/color_coco_0"/>


        <TextView
            android:id="@+id/tvPayment"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/choose_number"
            android:textColor="@color/color_coco_0"/>

        <TextView
            android:id="@+id/tvTextMessage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/Text_reminder_content"
            android:layout_marginHorizontal="5dp"

            android:textColor="@color/color_coco_0"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvReminders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_coco_3"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBar"
        tools:context=".reminders_activity.SendRemindersFragment"
        tools:listitem="@layout/text_reminder_item" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>